--- a/UI/ChungChi/UI_ChungChi.form
+++ b/UI/ChungChi/UI_ChungChi.form
@@ -342,6 +342,7 @@
             <Component class="javax.swing.JLabel" name="lblImg">
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
+                <Property name="text" type="java.lang.String" value="&#x1ea2;nh 300x150"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder>
