--- a/UI/LopHocUI/FormThemLH.form
+++ b/UI/LopHocUI/FormThemLH.form
@@ -45,41 +45,49 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jLabel1" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
-                              <Component id="jLabel2" alignment="0" min="-2" pref="123" max="-2" attributes="0"/>
-                              <Component id="jLabel4" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
-                              <Component id="jLabel10" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
-                              <Component id="jLabel8" min="-2" pref="102" max="-2" attributes="0"/>
-                              <Component id="jLabel9" min="-2" pref="102" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btnThemTenLop" min="-2" pref="234" max="-2" attributes="0"/>
-                              <Component id="cbThemChuongTrinh" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="dateKTLop" alignment="0" pref="150" max="32767" attributes="0"/>
-                                  <Component id="dateBDLop" alignment="0" max="32767" attributes="0"/>
-                              </Group>
-                              <Component id="txtThemGV" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
-                              <Component id="txtThemPH" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
-                          <Component id="btnXacNhanThemLop" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-              </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="224" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jLabel1" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
+                                      <Component id="jLabel2" alignment="0" min="-2" pref="123" max="-2" attributes="0"/>
+                                      <Component id="jLabel4" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
+                                      <Component id="jLabel10" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
+                                      <Component id="jLabel8" min="-2" pref="102" max="-2" attributes="0"/>
+                                      <Component id="jLabel9" min="-2" pref="102" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="btnThemTenLop" min="-2" pref="234" max="-2" attributes="0"/>
+                                      <Component id="cbThemChuongTrinh" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="dateKTLop" alignment="0" pref="150" max="32767" attributes="0"/>
+                                          <Component id="dateBDLop" alignment="0" max="32767" attributes="0"/>
+                                      </Group>
+                                      <Component id="txtThemGV" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
+                                      <Component id="txtThemPH" alignment="0" min="-2" pref="234" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
+                                  <Component id="txtThemPH1" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="223" max="-2" attributes="0"/>
+                          <Component id="btnXacNhanThemLop" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace min="151" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -123,9 +131,11 @@
                           <Component id="jLabel9" min="-2" pref="37" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                  <EmptySpace pref="19" max="32767" attributes="0"/>
+                  <Component id="txtThemPH1" pref="33" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnXacNhanThemLop" min="-2" pref="40" max="-2" attributes="0"/>
-                  <EmptySpace pref="22" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -149,7 +159,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="CH&#x1af;&#x1a0;NG TR&#xcc;NH"/>
+            <Property name="text" type="java.lang.String" value="M&#xe3; CH&#x1af;&#x1a0;NG TR&#xcc;NH"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
@@ -201,11 +211,10 @@
         <Component class="javax.swing.JComboBox" name="cbThemChuongTrinh">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="3">
+                <StringItem index="0" value="1"/>
+                <StringItem index="1" value="2"/>
+                <StringItem index="2" value="3"/>
               </StringArray>
             </Property>
           </Properties>
@@ -240,6 +249,14 @@
             </Property>
             <Property name="text" type="java.lang.String" value="T&#x1ea0;O M&#x1eda;I"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtThemPH1">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtThemPH1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
